--- a/public/css/portfolio-new.css
+++ b/public/css/portfolio-new.css
@@ -2,8 +2,14 @@
 	position: relative;
 	width: 800px;
 	height: 600px;
-	border: 2px solid blue;
 	margin-top: 50px;
+	color: #777;
+}
+
+img {
+	width: 100%;
+	height: 100%;
+	opacity: 0.7;
 }
 
 .hline {
@@ -23,3 +29,61 @@
 	height: 400px;
 	background-color: #777;
 }
+
+.navBar {
+	position: absolute;
+	top: 310px;
+	left: 210px;
+}
+
+.name {
+	position: absolute;
+	top: 255px;
+	left: 50px;
+}
+
+.nameHeader {
+	font-weight: normal;
+	font-size: 1.2em;
+}
+
+.links:hover {
+	color: #555;
+	cursor: pointer;
+}
+
+.portfolio {
+	position: absolute;
+	top: 150px;
+	left: 200px;
+	width: 400px;
+	height: 300px;
+	border: 1px solid blue;
+}
+
+.about {
+	position: absolute;
+	top: 300px;
+	left: 60px;
+	width: 400px;
+	height: 300px;
+	border: 1px solid red;
+}
+
+.aboutPicture{
+	position: absolute;
+	top: 61px;
+	left: 459px;
+	width: 270px;
+	height: 240px;
+	border: 1px solid red;
+}
+
+.blog {
+
+}
+
+.contact {
+
+}
+
