--- a/public/css/portfolio-new.css
+++ b/public/css/portfolio-new.css
@@ -32,14 +32,17 @@ img {
 
 .navBar {
 	position: absolute;
-	top: 310px;
-	left: 210px;
+	top: 315px;
+	left: 215px;
+	z-index: 1;
 }
 
 .name {
 	position: absolute;
 	top: 255px;
 	left: 50px;
+	z-index: 1;
+	cursor: pointer;
 }
 
 .nameHeader {
@@ -55,27 +58,46 @@ img {
 .portfolio {
 	position: absolute;
 	top: 150px;
-	left: 200px;
-	width: 400px;
+	left: 100px;
+	width: 600px;
 	height: 300px;
 	border: 1px solid blue;
+	opacity: 0;
+}
+
+.portContent {
+	position: absolute;
+	left: 0px;
+	width: 45%;
+	height: 100%;
+	padding: 10px;
+}
+
+.portImage {
+	position: absolute;
+	right: 0px;
+	width: 50%;
+	height: 100%;
 }
 
 .about {
 	position: absolute;
-	top: 300px;
+	top: 260px;
 	left: 60px;
 	width: 400px;
 	height: 300px;
+	opacity: 0;
+	padding: 10px;
 	border: 1px solid red;
 }
 
 .aboutPicture{
 	position: absolute;
-	top: 61px;
+	top: 21px;
 	left: 459px;
 	width: 270px;
 	height: 240px;
+	opacity: 0;
 	border: 1px solid red;
 }
 
