--- a/public/css/portfolio-new.css
+++ b/public/css/portfolio-new.css
@@ -1,15 +1,59 @@
+body {
+	background-image: url(/img/maze.png);
+}
+
 .container {
 	position: relative;
 	width: 800px;
 	height: 600px;
 	margin-top: 50px;
 	color: #777;
+	font-family: 'Taviraj', serif;
 }
 
 img {
 	width: 100%;
 	height: 100%;
 	opacity: 0.7;
+}
+
+.banner {
+	position: absolute;
+	top: 54px;
+	left: 202px;
+	width: 595px;
+	height: 245px;
+	opacity: 0.8;
+	background-image: url(/img/outlets.png);
+}
+
+.bannerText {
+	font-size: 1.5em;
+	opacity: 0;
+	color: #ddd;
+}
+
+.bannerLeft {
+	position: absolute;
+	width: 150px;
+	top: 105px;
+	left: 125px;
+	text-align: right;
+}
+
+.bannerSeperater {
+	position: absolute;
+	color: #f00;
+	font-size: 2em;
+	top: 100px;
+	left: 295px;
+}
+
+.bannerRight {
+	position: absolute;
+	width: 150px;
+	top: 105px;
+	right: 125px;
 }
 
 .hline {
@@ -57,18 +101,17 @@ img {
 
 .portfolio {
 	position: absolute;
-	top: 150px;
-	left: 100px;
+	top: 153px;
+	left: 98px;
 	width: 600px;
 	height: 300px;
-	border: 1px solid blue;
 	opacity: 0;
 }
 
 .portContent {
 	position: absolute;
 	left: 0px;
-	width: 45%;
+	width: 50%;
 	height: 100%;
 	padding: 10px;
 }
@@ -88,24 +131,80 @@ img {
 	height: 300px;
 	opacity: 0;
 	padding: 10px;
-	border: 1px solid red;
 }
 
 .aboutPicture{
 	position: absolute;
-	top: 21px;
-	left: 459px;
+	top: 18px;
+	left: 463px;
 	width: 270px;
 	height: 240px;
 	opacity: 0;
-	border: 1px solid red;
 }
 
 .blog {
 
 }
 
-.contact {
+.contactForm {
+	position: absolute;
+	top: 261px;
+	left: 203px;
+	width: 500px;
+	height: 250px;
+	padding: 10px;
+	opacity: 0;
+}
+
+.contactContent {
+	position: absolute;
+	top: 60px;
+	left: 203px;
+	width: 500px;
+	height: 196px;
+	padding: 10px;
+	opacity: 0;
+}
+
+#formname {
+    width: 235px;
+    height: 30px;
+    top: 10px;
+    position: absolute;
+    border: 1px solid #777;
+}
+
+#formnumber {
+    width: 235px;
+    height: 30px;
+    position: absolute;
+    top: 10px;
+    left: 252px;
+    border: 1px solid #777;
+}
+#formemail {
+    width: 477px;
+    height: 30px;
+    position: absolute;
+    top: 50px;
+    border: 1px solid #777;
+}
+
+#formmessage {
+    width: 477px;
+    height: 150px;
+    font-size: 1em;
+    border: 1px solid #777;
+    position: absolute;
+    top: 90px;
+}
+
+#formsubmit {
+    position: absolute;
+    top: 250px;
+    width: 120px;
+    height: 30px;
+    border: 1px solid #777;
 
 }
 
