--- a/public/css/portfolio-new.css
+++ b/public/css/portfolio-new.css
@@ -6,8 +6,9 @@ body {
 	position: relative;
 	width: 800px;
 	height: 600px;
-	margin-top: 50px;
+	margin-top: 30px;
 	color: #777;
+	opacity: 0;
 	font-family: 'Taviraj', serif;
 }
 
@@ -23,14 +24,14 @@ img {
 	left: 202px;
 	width: 595px;
 	height: 245px;
-	opacity: 0.8;
+	opacity: 0;
 	background-image: url(/img/outlets.png);
 }
 
 .bannerText {
 	font-size: 1.5em;
 	opacity: 0;
-	color: #ddd;
+	color: #eee;
 }
 
 .bannerLeft {
@@ -59,7 +60,7 @@ img {
 .hline {
 	position: absolute;
 	top: 300px;
-	left: 0px;
+	left: -20px;
 	width: 800px;
 	height: 1px;
 	background-color: #777;
@@ -68,7 +69,7 @@ img {
 .vline {
 	position: absolute;
 	top: 50px;
-	left: 200px;
+	left: 220px;
 	width: 1px;
 	height: 400px;
 	background-color: #777;
@@ -77,14 +78,14 @@ img {
 .navBar {
 	position: absolute;
 	top: 315px;
-	left: 215px;
+	left: 235px;
 	z-index: 1;
 }
 
 .name {
 	position: absolute;
 	top: 255px;
-	left: 50px;
+	left: 30px;
 	z-index: 1;
 	cursor: pointer;
 }
@@ -143,7 +144,13 @@ img {
 }
 
 .blog {
-
+	position: absolute;
+	top: 100px;
+	left: 203px;
+	width: 500px;
+	height: 450px;
+	padding: 10px;
+	opacity: 0;
 }
 
 .contactForm {
