--- a/public/css/portfolio-new.css
+++ b/public/css/portfolio-new.css
@@ -7,7 +7,7 @@ body {
 	width: 800px;
 	height: 600px;
 	margin-top: 30px;
-	color: #777;
+	color: #555;
 	opacity: 0;
 	font-family: 'Taviraj', serif;
 }
@@ -79,14 +79,14 @@ img {
 	position: absolute;
 	top: 315px;
 	left: 235px;
-	z-index: 1;
+	z-index: 2;
 }
 
 .name {
 	position: absolute;
 	top: 255px;
 	left: 30px;
-	z-index: 1;
+	z-index: 2;
 	cursor: pointer;
 }
 
@@ -96,7 +96,8 @@ img {
 }
 
 .links:hover {
-	color: #555;
+	color: #888;
+	font-weight: bold;
 	cursor: pointer;
 }
 
@@ -106,7 +107,17 @@ img {
 	left: 98px;
 	width: 600px;
 	height: 300px;
+	overflow: auto;
+	z-index: 1;
 	opacity: 0;
+	display: none;
+}
+
+.projects {
+	width: 100%;
+	height: 100%;
+	position: relative;
+	margin-bottom: 10px;
 }
 
 .portContent {
@@ -132,6 +143,7 @@ img {
 	height: 300px;
 	opacity: 0;
 	padding: 10px;
+	display: none;
 }
 
 .aboutPicture{
@@ -141,6 +153,7 @@ img {
 	width: 270px;
 	height: 240px;
 	opacity: 0;
+	display: none;
 }
 
 .blog {
@@ -151,6 +164,7 @@ img {
 	height: 450px;
 	padding: 10px;
 	opacity: 0;
+	display: none;
 }
 
 .contactForm {
@@ -161,6 +175,7 @@ img {
 	height: 250px;
 	padding: 10px;
 	opacity: 0;
+	display: none;
 }
 
 .contactContent {
@@ -171,6 +186,7 @@ img {
 	height: 196px;
 	padding: 10px;
 	opacity: 0;
+	display: none;
 }
 
 #formname {
