--- a/public/css/portfolio-new.css
+++ b/public/css/portfolio-new.css
@@ -15,7 +15,6 @@ body {
 img {
 	width: 100%;
 	height: 100%;
-	opacity: 0.7;
 }
 
 .banner {
@@ -105,7 +104,7 @@ img {
 	position: absolute;
 	top: 153px;
 	left: 98px;
-	width: 600px;
+	width: 500px;
 	height: 300px;
 	overflow: auto;
 	z-index: 1;
@@ -117,21 +116,24 @@ img {
 	width: 100%;
 	height: 100%;
 	position: relative;
-	margin-bottom: 10px;
 }
 
 .portContent {
 	position: absolute;
 	left: 0px;
-	width: 50%;
-	height: 100%;
+	width: 100%;
+	height: auto;
+	background-color: #000;
+	color: #fff;
+	z-index: 2;
+	opacity: 0.8;
 	padding: 10px;
 }
 
 .portImage {
 	position: absolute;
 	right: 0px;
-	width: 50%;
+	width: 100%;
 	height: 100%;
 }
 
