--- a/public/css/portfolio-new.css
+++ b/public/css/portfolio-new.css
@@ -2,6 +2,12 @@ body {
 	background-image: url(/img/maze.png);
 }
 
+.loadIcon {
+	position: absolute;
+	left: 45%;
+	top: 50%;
+}
+
 .container {
 	position: relative;
 	width: 800px;
@@ -12,10 +18,7 @@ body {
 	font-family: 'Taviraj', serif;
 }
 
-img {
-	width: 100%;
-	height: 100%;
-}
+
 
 .banner {
 	position: absolute;
@@ -137,6 +140,11 @@ img {
 	height: 100%;
 }
 
+.projectPictures {
+	width: 100%;
+	height: 100%;
+}
+
 .about {
 	position: absolute;
 	top: 200px;
@@ -150,10 +158,10 @@ img {
 
 .aboutPicture{
 	position: absolute;
-	top: 18px;
+	top: 15px;
 	left: 463px;
-	width: 270px;
-	height: 180px;
+	width: 271px;
+	height: 181px;
 	opacity: 0;
 	display: none;
 }
@@ -189,6 +197,10 @@ img {
 	padding: 10px;
 	opacity: 0;
 	display: none;
+}
+
+.myPic {
+	border: 2px solid #000;
 }
 
 #formname {
