--- a/public/css/portfolio-new.css
+++ b/public/css/portfolio-new.css
@@ -18,8 +18,6 @@ body {
 	font-family: 'Taviraj', serif;
 }
 
-
-
 .banner {
 	position: absolute;
 	top: 54px;
@@ -219,6 +217,7 @@ body {
     left: 252px;
     border: 1px solid #777;
 }
+
 #formemail {
     width: 477px;
     height: 30px;
@@ -242,6 +241,69 @@ body {
     width: 120px;
     height: 30px;
     border: 1px solid #777;
+}
 
+@media (max-width: 800px) {
+	.container {
+		width: 600px;
+		height: 2300px;
+	}
+
+	.banner {
+		display: block;
+		opacity: 1;
+		width: 100%;
+		left: 0px;
+		top: 0px;
+	}
+
+	.name {
+		display: none;
+	}
+
+	.navBar {
+		display: none;
+	}
+
+	.vline {
+		display: none;
+	}
+
+	.hline {
+		display: none;
+	}
+
+	.about {
+		width: 100%;
+		top: 245px;
+		left: 0px;
+		opacity: 1;
+		display: block;
+	}
+
+	.portfolio {
+		top: 445px;
+		display: block;
+		opacity: 1;
+		width: 100%;
+		height: 1500px;
+		left: 0px;
+		overflow: hidden;
+	}
+	.portImage {
+		height: 300px;
+	}
+
+	.projects {
+		height: 300px;
+	}
+
+	.contactForm {
+		width: 100%;
+		top: 1970px;
+		left: 50px;
+		opacity: 1;
+		display: block;
+	}
 }
 
