--- a/public/css/portfolio-new.css
+++ b/public/css/portfolio-new.css
@@ -245,8 +245,8 @@ body {
 
 @media (max-width: 800px) {
 	.container {
-		width: 600px;
-		height: 2300px;
+		width: 400px;
+		height: 1500px;
 	}
 
 	.banner {
@@ -282,28 +282,44 @@ body {
 	}
 
 	.portfolio {
-		top: 445px;
+		top: 550px;
 		display: block;
 		opacity: 1;
 		width: 100%;
-		height: 1500px;
+		height: 1300px;
 		left: 0px;
 		overflow: hidden;
 	}
 	.portImage {
-		height: 300px;
+		height: 250px;
 	}
 
 	.projects {
-		height: 300px;
+		height: 250px;
 	}
 
-	.contactForm {
-		width: 100%;
-		top: 1970px;
-		left: 50px;
-		opacity: 1;
-		display: block;
+	.bannerLeft {
+		position: absolute;
+		width: 150px;
+		top: 105px;
+		left: 10px;
+		text-align: right;
 	}
+
+	.bannerSeperater {
+		position: absolute;
+		color: #f00;
+		font-size: 2em;
+		top: 100px;
+		left: 200px;
+	}
+
+	.bannerRight {
+		position: absolute;
+		width: 150px;
+		top: 105px;
+		right: 10px;
+	}
+
 }
 
