--- a/public/css/portfolio-new.css
+++ b/public/css/portfolio-new.css
@@ -202,24 +202,15 @@ body {
 }
 
 #formname {
-    width: 235px;
+    width: 50%;
     height: 30px;
     top: 10px;
     position: absolute;
-    border: 1px solid #777;
-}
-
-#formnumber {
-    width: 235px;
-    height: 30px;
-    position: absolute;
-    top: 10px;
-    left: 252px;
     border: 1px solid #777;
 }
 
 #formemail {
-    width: 477px;
+    width: 95%;
     height: 30px;
     position: absolute;
     top: 50px;
@@ -227,7 +218,7 @@ body {
 }
 
 #formmessage {
-    width: 477px;
+    width: 95%;
     height: 150px;
     font-size: 1em;
     border: 1px solid #777;
@@ -243,17 +234,72 @@ body {
     border: 1px solid #777;
 }
 
-@media (max-width: 500px) {
+.navBarMobile {
+	display: none;
+}
+
+.nameMobile {
+	display: none;
+}
+
+#aboutBanner {
+	display: none;
+}
+
+#portfolioBanner {
+	display: none;
+}
+
+#contactBanner {
+	display: none;
+}
+
+
+@media (max-width: 600px) {
+
 	.container {
 		margin-top: 0px;
 		width: 400px;
-		height: 1500px;
+		height: 2600px;
+	}
+
+	.navBarMobile {
+		display: block;
+		left: 0px;
+		top: 0px;
+		position: fixed;
+		opacity: 0.9;
+		width: 100%;
+		z-index: 3;
+		background-color: #000;
+	}
+
+	.linksM {
+		width: 33.7%;
+		height: 50px;
+		text-align: center;
+		margin-left: -6px;
+		padding-top: 15px;
+		border-left: 2px solid #ddd;
+		border-right: 2px solid #ddd;
+		color: #ddd;
+		display: inline-block;
+		cursor: pointer;
+	}
+
+	#goAboutM {
+		border-left: 0px;
+	}
+
+	#goContactM {
+		border-right: 0px;
 	}
 
 	.banner {
 		display: block;
 		opacity: 1;
 		width: 100%;
+		height: 400px;
 		left: 0px;
 		top: 0px;
 	}
@@ -276,14 +322,18 @@ body {
 
 	.about {
 		width: 100%;
-		top: 245px;
+		top: 465px;
 		left: 0px;
 		opacity: 1;
 		display: block;
 	}
 
+	.aboutPicture {
+		display: none;
+	}
+
 	.portfolio {
-		top: 550px;
+		top: 820px;
 		display: block;
 		opacity: 1;
 		width: 100%;
@@ -291,6 +341,7 @@ body {
 		left: 0px;
 		overflow: hidden;
 	}
+
 	.portImage {
 		height: 250px;
 	}
@@ -303,7 +354,7 @@ body {
 		position: absolute;
 		width: 150px;
 		top: 105px;
-		left: 10px;
+		left: 0px;
 		text-align: right;
 	}
 
@@ -312,14 +363,92 @@ body {
 		color: #f00;
 		font-size: 2em;
 		top: 100px;
-		left: 200px;
+		left: 190px;
 	}
 
 	.bannerRight {
 		position: absolute;
 		width: 150px;
 		top: 105px;
-		right: 10px;
+		right: 20px;
+	}
+
+	.contactContent {
+		display: block;
+		opacity: 1;
+		width: 100%;
+		position: absolute;
+		top: 2120px;
+		left: 0px;
+	}
+
+	.contactForm {
+		display: block;
+		opacity: 1;
+		width: 100%;
+		position: absolute;
+		top: 2220px;
+		left: 0px;
+	}
+
+	.nameMobile {
+		position: absolute;
+		top: 200px;
+		left: 0px;
+		width: 100%;
+		display: block;
+		color: #ddd;
+		text-align: center;
+		font-size: 1.8em;
+		z-index: 2;
+	}
+
+	#aboutBanner {
+		display: block;
+		position: absolute;
+		top: 400px;
+		left: 0px;
+		width: 100%;
+		height: 50px;
+		background-color: #000;
+		color: #ddd;
+		text-align: center;
+		padding-top: 10px;
+		font-size: 1.5em;
+		opacity: 0.9;
+		z-index: 2;
+	}
+
+	#portfolioBanner {
+		display: block;
+		position: absolute;
+		top: 770px;
+		left: 0px;
+		width: 100%;
+		height: 50px;
+		background-color: #000;
+		color: #ddd;
+		text-align: center;
+		padding-top: 10px;
+		font-size: 1.5em;
+		opacity: 0.9;
+		z-index: 2;
+	}
+
+	#contactBanner {
+		display: block;
+		position: absolute;
+		top: 2070px;
+		left: 0px;
+		width: 100%;
+		height: 50px;
+		background-color: #000;
+		color: #ddd;
+		text-align: center;
+		padding-top: 10px;
+		font-size: 1.5em;
+		opacity: 0.9;
+		z-index: 2;
 	}
 
 }
