--- a/public/css/portfolio-new.css
+++ b/public/css/portfolio-new.css
@@ -387,7 +387,7 @@ body {
 	#bannerTextMobile {
 		display: block;
 		position: absolute;
-		top: 180px;
+		top: 40%;
 		text-align: center;
 		width: 100%;
 		font-size: 1.4em;
@@ -417,7 +417,7 @@ body {
 
 	.nameMobile {
 		position: absolute;
-		top: 250px;
+		top: 50%;
 		left: 0px;
 		width: 100%;
 		display: block;
