--- a/public/css/portfolio-new.css
+++ b/public/css/portfolio-new.css
@@ -125,6 +125,8 @@ body {
 	width: 100%;
 	height: 300px;
 	position: relative;
+	margin-bottom: 15px;
+	border: 1px solid #444;
 }
 
 .portContent {
